--- a/06_bootstrap/templates/index.html
+++ b/06_bootstrap/templates/index.html
@@ -3,23 +3,15 @@
 {% extends "bootstrap/base.html" %}
 
 {% block content %}
+
     <div class="container">
 
-        <div class="btn-group" role="group" aria-label="...">
-          <button type="button" class="btn btn-default">Left</button>
-          <button type="button" class="btn btn-default">Middle</button>
-          <button type="button" class="btn btn-default">Right</button>
-        </div>
-
-        <h4>Things to do when you're bored</h4>
-
-        <dl>
-            <dt>Indoors</dt>
-            <dd>- take a nap</dd>
-            <dd>- watch Netflix for 8 hours</dd>
-            <dt>Outdoors</dt>
-            <dd>- go back inside</dd>
-        </dl>
+        <ul class="nav nav-pills">
+            <li role="presentation" class="active"><a href="#">Home</a></li>
+            <li role="presentation"><a href="#">Profile</a></li>
+            <li role="presentation"><a href="#">Messages</a></li>
+        </ul>
 
     </div>
+
 {% endblock %}
